--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "size": "bundlesize"
+    "size": "bundlesize",
+    "dev": "webpack-dev-server --config ./webpack/webpack.ac.dev.js"
   },
   "bundlesize": [
     {
@@ -113,6 +114,7 @@
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^1.1.11",
     "glob": "^6.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "htmlmin": "0.0.4",
     "imports-loader": "^0.8.0",
     "inline-source": "^4.4.0",
@@ -149,7 +151,7 @@
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.1.8",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.2",
     "when": "~3.4.4",
