Remove all old unused development files and dependencies

--- a/package.json
+++ b/package.json
@@ -2,35 +2,23 @@
   "name": "engagement_framework",
   "version": "0.1.0",
   "description": "3rd party embeddable framework and API",
-  "config": {
-    "watchConfigPath": "/config/.watch.example"
-  },
   "scripts": {
     "build:version:generate": "git rev-parse --short HEAD > ./dist/VERSION_HASH",
     "build:version:clean": "rm -rf ./dist/VERSION_HASH",
-    "prebuild-examples": "uglifyjs --compress --mangle -- ./src/bootstrap.js > ./dist/bootstrap.js",
-    "build-examples": "node script/build-examples.js -- $npm_package_config_watchConfigPath",
-    "prewatch": "npm run build:version:generate && npm run build-examples",
-    "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map && script/fetch_i18n",
-    "build:prod": "webpack --config ./webpack/webpack.prod.js",
-    "build:ac": "webpack --config ./webpack/webpack.ac.prod.js",
-    "build:ac-validate": "npm run build:ac && npm run size",
+    "predev": "npm run build:version:generate",
+    "dev": "webpack-dev-server --config ./webpack/webpack.ac.dev.js",
+    "dev-preview": "webpack-dev-server --config ./webpack/webpack.previewer.dev.js",
+    "build-setup:prod": "npm run build:version:generate && rm -rf ./dist/*.map && script/fetch_i18n",
+    "build:prod": "webpack --config ./webpack/webpack.ac.prod.js",
+    "build:validate": "npm run build:prod && npm run size",
     "build:previewer": "webpack --config ./webpack/webpack.previewer.prod.js",
-    "watchConf": "node script/update_watch_config",
-    "postwatchConf": "npm run watch",
-    "watch": "webpack-dev-server --config ./webpack/webpack.dev.js",
-    "watchConf:ac": "node script/update_watch_config",
-    "postwatchConf:ac": "npm run watch:ac",
-    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.js",
     "build": "npm run build-setup:prod && npm run build:prod",
-    "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node test/runner.js",
     "test:ci": "NODE_ENV=test node test/runner.js",
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "size": "bundlesize",
-    "dev": "webpack-dev-server --config ./webpack/webpack.ac.dev.js"
+    "size": "bundlesize"
   },
   "bundlesize": [
     {
@@ -103,21 +91,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bundlesize": "^0.17.0",
-    "chalk": "^1.1.3",
-    "concurrently": "^3.1.0",
     "css-loader": "^0.28.11",
     "cssstyle": "0.2.30",
-    "dotenv": "^4.0.0",
-    "es5-shim": "~3.4.0",
     "eslint": "^4.19.1",
     "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-react": "^3.16.1",
-    "file-loader": "^1.1.11",
-    "glob": "^6.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "htmlmin": "0.0.4",
     "imports-loader": "^0.8.0",
-    "inline-source": "^4.4.0",
     "jasmine": "^2.8.0",
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax.git#v2.0.0.rc2",
     "jasmine-spec-reporter": "^2.4.0",
@@ -125,7 +105,6 @@
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^5.7.0",
     "mockery": "~1.4.0",
-    "node-cmd": "^3.0.0",
     "node-sass": "4.5.3",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-loader": "^2.1.5",
@@ -137,16 +116,10 @@
     "redux-mock-store": "^1.2.1",
     "require-uncached": "~1.0.2",
     "rest": "~1.2.0",
-    "run-sequence": "~0.3.6",
     "sass-loader": "^7.0.1",
-    "selenium-server": "~2.43.1",
-    "semver": "^5.3.0",
     "source-map-loader": "^0.2.3",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.2",
-    "tiny-lr": "0.0.7",
-    "uglify-js": "^2.8.29",
-    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
