--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
     - vendor/bundle
 
 env:
-  - TASK=build:ac-validate
+  - TASK=build:validate
   - TASK=lint
   - TASK=test:ci
   - TASK=build:prod
