--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^16.3.2",
     "react-linkify": "^0.2.2",
     "react-redux": "^5.0.6",
+    "react-slick": "^0.23.1",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^2.6.1",
@@ -125,7 +126,6 @@
     "svgo-loader": "^1.1.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
-    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.8",
     "webpack-manifest-plugin": "^2.0.3",
