--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "size": "bundlesize"
+    "size": "bundlesize",
+    "jest": "jest"
   },
   "bundlesize": [
     {
@@ -98,12 +99,16 @@
     "cssstyle": "0.2.30",
     "eslint": "^4.19.1",
     "eslint-plugin-jasmine": "^2.8.4",
+    "eslint-plugin-jest": "^21.22.1",
     "eslint-plugin-react": "^3.16.1",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.8.0",
     "jasmine": "^2.8.0",
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax.git#v2.0.0.rc2",
     "jasmine-spec-reporter": "^4.2.1",
+    "jest": "^23.6.0",
+    "jest-dom": "^1.12.1",
     "jsdom": "^12.0.0",
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^5.7.0",
@@ -114,6 +119,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "react-test-renderer": "^16.0.0",
+    "react-testing-library": "^5.2.0",
     "react-transform-catch-errors": "^1.0.1",
     "redux-catch": "^1.3.1",
     "redux-mock-store": "^1.2.1",
