--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:validate": "npm run build:prod && npm run size",
     "build:previewer": "webpack --config ./webpack/webpack.previewer.prod.js",
     "build": "npm run build-setup:prod && npm run build:prod",
+    "build-previewer": "npm run build-setup:prod && npm run build:previewer",
     "test": "node test/runner.js",
     "test:ci": "NODE_ENV=test node test/runner.js",
     "test:debug": "node debug test/runner.js",
