--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "require-uncached": "~1.0.2",
     "rest": "~1.2.0",
     "sass-loader": "^7.0.1",
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "source-map-loader": "^0.2.3",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.2",
