--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "svgo-loader": "^1.1.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.8",
     "webpack-manifest-plugin": "^2.0.3",
