--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-previewer": "npm run build-setup:prod && npm run build:previewer",
     "test": "node test/runner.js",
-    "test:ci": "NODE_ENV=test node test/runner.js",
+    "test:ci": "NODE_ENV=test node test/runner.js && npm run jest",
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
