Add chat preview tests

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:previewer": "webpack --config ./webpack/webpack.previewer.prod.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-previewer": "npm run build-setup:prod && npm run build:previewer",
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test npm run test -- --watch",
     "test:old": "node test/runner.js",
     "test:ci": "NODE_ENV=test node test/runner.js && npm run test",
     "test:debug": "node debug test/runner.js",
@@ -110,6 +110,7 @@
     "jasmine-spec-reporter": "^4.2.1",
     "jest": "^23.6.0",
     "jest-dom": "^1.12.1",
+    "jest-env-jsdom-silent": "^1.0.0",
     "jest-webpack-resolver": "^0.3.0",
     "jsdom": "^12.0.0",
     "json-loader": "^0.5.7",
