Update HTML templates

--- a/dev/templates/web_widget/live.html.example
+++ b/dev/templates/web_widget/live.html.example
@@ -7,5 +7,7 @@
 <body>
   <h1>Web Widget Local</h1>
   <%= htmlWebpackPlugin.options.snippet %>
+  <script nonce="<%= htmlWebpackPlugin.options.nonce %>">
+  </script>
 </body>
 </html>
