--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:previewer": "webpack --config ./webpack/webpack.previewer.prod.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-previewer": "npm run build-setup:prod && npm run build:previewer",
-    "test": "NODE_ENV=test jest",
+    "test": "jest",
     "test:watch": "NODE_ENV=test npm run test -- --watch",
     "test:old": "node test/runner.js",
     "test:ci": "NODE_ENV=test npm run test -- --runInBand --ci && node test/runner.js",
