--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-previewer": "npm run build-setup:prod && npm run build:previewer",
     "test": "jest",
-    "test:watch": "NODE_ENV=test npm run test -- --watch",
+    "test:watch": "npm run test -- --watch",
     "test:old": "node test/runner.js",
-    "test:ci": "NODE_ENV=test npm run test -- --runInBand --ci && node test/runner.js",
+    "test:ci": "npm run test -- --runInBand --ci && NODE_ENV=test node test/runner.js",
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
