--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "source-map-loader": "^0.2.3",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.2",
+    "timezone-mock": "^1.0.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
