--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:previewer": "webpack --config ./webpack/webpack.previewer.prod.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-previewer": "npm run build-setup:prod && npm run build:previewer",
-    "test": "jest",
+    "test": "TZ=utc jest",
     "test:watch": "npm run test -- --watch",
     "test:old": "node test/runner.js",
     "test:ci": "npm run test -- --runInBand --ci && NODE_ENV=test node test/runner.js",
@@ -146,7 +146,6 @@
     "source-map-loader": "^0.2.3",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.2",
-    "timezone-mock": "^1.0.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
