--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "eslint --fix src test --ignore-pattern=src/translation/*.js",
+      "eslint src test --ignore-pattern=src/translation/*.js",
       "git add"
     ]
   },
