--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:old": "node test/runner.js",
     "test:ci": "npm run test -- --runInBand --ci && NODE_ENV=test node test/runner.js",
     "test:debug:old": "node debug test/runner.js",
-    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
+    "test:debug": "TZ=utc node --inspect node_modules/.bin/jest --runInBand",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
     "size": "bundlesize"
