--- a/package.json
+++ b/package.json
@@ -111,9 +111,10 @@
     "css-loader": "^0.28.11",
     "cssstyle": "0.2.30",
     "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-jest": "^21.22.1",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.3",
     "imports-loader": "^0.8.0",
