--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,32 @@
 {
-  "presets": ["env", "react", "stage-2"],
-  "ignore": ["src/translation/*.js"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "ignore": [
+    "src/translation/*.js"
+  ],
   "env": {
     "test": {
-      "plugins": ["dynamic-import-node"]
+      "plugins": [
+        "dynamic-import-node"
+      ]
     }
-  }
+  },
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions"
+  ]
 }
