--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "app-root-path": "^2.0.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
