--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "color": "~3.0.0",
     "core-js": "^2.5.1",
     "libphonenumber-js": "~0.4.49",
-    "lodash": "~4.1.0",
+    "lodash": "^4.17.11",
     "luxon": "1.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.7.0",
@@ -168,7 +168,7 @@
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.2",
     "when": "~3.4.4",
