--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@zendeskgarden/css-tooltips": "^4.1.6",
     "@zendeskgarden/css-variables": "^5.2.3",
     "@zendeskgarden/react-buttons": "^3.7.0",
-    "@zendeskgarden/react-checkboxes": "^3.3.2",
+    "@zendeskgarden/react-checkboxes": "3.4.8",
     "@zendeskgarden/react-modals": "^5.4.0",
     "@zendeskgarden/react-notifications": "^3.2.0",
     "@zendeskgarden/react-select": "^2.5.2",
